update run-tests.sh